--- a/ckanext/jsonschema/templates/package/snippets/package_metadata_extrafields.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_metadata_extrafields.html
@@ -1,6 +1,5 @@
 {% ckan_extends %}
 
-{# You could remove 'free extras' from the package form like this, but we keep them for this example's tests.
-  {% block custom_fields %}
-  {% endblock %}
-#}
+{# You could remove 'free extras' from the package form #}
+{% block custom_fields %}
+{% endblock %}
