--- a/ckanext/jsonschema/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_basic_fields.html
@@ -1,5 +1,41 @@
 {% ckan_extends %}
 
 {% block package_basic_fields_custom %}
-  {{ form.input('custom_text', label=_('Custom Text'), id='field-custom_text', placeholder=_('custom text'), value=data.custom_text, error=errors.custom_text, classes=['control-medium']) }}
+{#
+
+#}
+{# if type in h.package_types() #}
+
+  
+
+{% set jsonschema = c.jsonschema %}
+{% if jsonschema %}
+  
+  {% set BODY_KEY = h.get_body_key() %}
+  {% set TYPE_KEY = h.get_type_key() %}
+  {% set OPT_KEY = h.get_opt_key() %}
+  {% set VERSION_KEY = h.get_version_key() %}
+  
+  {% set version = jsonschema[VERSION_KEY] %}
+  {% set type = jsonschema[TYPE_KEY] %}
+  {% set schema = h.get_schema(type) %}
+  {% set template = h.get_template(type) %}
+
+  <h2>{{type}}</h2>
+
+  <h3>{{schema}}</h3>
+  
+  <h3>{{template}}</h3>
+
+  <h3>{{data}}</h3>
+  
+  {{ form.input(BODY_KEY, label=_('BODY'), id='field-'+BODY_KEY, placeholder=_('custom'), value=data[BODY_KEY], error=errors[BODY_KEY], classes=['control-medium']) }}
+  {{ form.input(TYPE_KEY, label=_('TYPE'), id='field-'+TYPE_KEY, placeholder=_('custom'), value=data[TYPE_KEY], error=errors[TYPE_KEY], classes=['control-medium']) }}
+  {{ form.input(OPT_KEY, label=_('OPTIONS'), id='field-'+OPT_KEY, placeholder=_('custom'), value=data[OPT_KEY], error=errors[OPT_KEY], classes=['control-medium']) }}
+  {{ form.input(VERSION_KEY, label=_('VERSION'), id='field-'+VERSION_KEY, placeholder=_('custom'), value=data[VERSION_KEY], error=errors[VERSION_KEY], classes=['control-medium']) }}
+  
+
+{% endif %}
+
+
 {% endblock %}
