--- a/ckanext/jsonschema/templates/package/snippets/additional_info.html
+++ b/ckanext/jsonschema/templates/package/snippets/additional_info.html
@@ -1,13 +1,15 @@
 {% ckan_extends %}
 
-{% block extras %}
-  {% set BODY_KEY = h.get_body_key() %}
-  {% set TYPE_KEY = h.get_type_key() %}
-  {% set OPT_KEY = h.get_opt_key() %}
-  {% if pkg_dict[BODY_KEY] %}
+{% if h.get_dataset_type() in h.package_types() %}
+  {% block extras %}
+
+    {% set BODY_KEY = h.get_body_key() %}
+    {% set TYPE_KEY = h.get_type_key() %}
+    {% set OPT_KEY = h.get_opt_key() %}
     <tr>
       <th scope="row" class="dataset-label">{{ _("BODY") }}</th>
       <td class="dataset-details">{{ pkg_dict[BODY_KEY] }}</td>
     </tr>
-  {% endif %}
-{% endblock %}
+  
+  {% endblock %}
+{% endif %}
