--- a/ckanext/jsonschema/templates/package/snippets/package_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_form.html
@@ -1,22 +1,32 @@
 {% ckan_extends %}
 
-{% block disclaimer %}
-  <p class="action-info small">
-    {%- trans -%}
-    The <i>data license</i> you select above only applies to the contents
-    of any resource files that you add to this dataset. By submitting
-    this form, you agree to release the <i>metadata</i> values that you
-    enter into the form under the
-    <a href="http://opendatacommons.org/licenses/odbl/1-0/">Open Database License</a>.
-    {%- endtrans -%}
-  </p>
-{% endblock %}
 
+{# which is the jsonschema type in this context/environment #}
+{% if h.get_dataset_type() in h.package_types() %}
 
-{% block form_actions %}
-  {{super()}}
-  <input type="hidden" name="_ckan_phase" value="" />
-  {% block save_button %}
-    <button class="btn btn-primary" type="submit" name="save" value="go-metadata">{% block save_button_text %}{{ _('Next: Add Data') }}{% endblock %}</button>
+  {% block disclaimer %}
+    <p class="action-info small">
+      {%- trans -%}
+      The <i>data license</i> you select above only applies to the contents
+      of any resource files that you add to this dataset. By submitting
+      this form, you agree to release the <i>metadata</i> values that you
+      enter into the form under the
+      <a href="http://opendatacommons.org/licenses/odbl/1-0/">Open Database License</a>.
+      {%- endtrans -%}
+    </p>
   {% endblock %}
-{% endblock %}
+
+  {% block form_actions %}
+    {{super()}}
+    <input type="hidden" name="_ckan_phase" value="" />
+    
+    
+    {#
+    {% block save_button %}
+      <button class="btn btn-primary" type="submit" name="save" value="go-metadata">{% block save_button_text %}{{ _('Next: Add Data') }}{% endblock %}</button>
+    {% endblock %}
+    #}
+
+  {% endblock %}
+
+{% endif %}
