--- a/ckanext/jsonschema/templates/package/snippets/resource_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/resource_form.html
@@ -1,39 +1,37 @@
 {% ckan_extends %}
 
-{% block basic_fields %}
-{{ super() }}
+{% if h.get_dataset_type() in h.package_types() %}
 
-{% set TYPE_KEY = h.get_type_key() %}
-{% set schema_type = data[TYPE_KEY] or h.get_schema_type() %}
+    {% block basic_fields %}
 
-{% if dataset_type in h.package_types() %}
+    {{ super() }}
+        {% set formats = [] %}
+        {% for type in h.resource_types(dataset_type) %}
+            {% set fake = formats.append({"value": type, "text": _(type)}) %}
+        {% endfor %}
 
-    {% set formats = [] %}
-    {% for type in h.resource_types(dataset_type) %}
-        {% set fake = formats.append({"value": type, "text": _(type)}) %}
-    {% endfor %}
+        {% set TYPE_KEY = h.get_type_key() %}
+        {% set schema_type = data[TYPE_KEY] or h.get_dataset_type() %}
+        {% call form.select(TYPE_KEY, label=_('TYPE'), id='field-'+TYPE_KEY,
+            options=formats,
+            selected=data[TYPE_KEY], error=errors.format, classes=['control-medium'], attrs={}, is_required=false) %}
+        <span class="info-block info-block-small">
+            <i class="fa fa-info-circle"></i>
+            {{ _('This will change the form based on the selected type, please select the right one') }}
+        </span>
+        {% endcall %}
+        
+        {% set BODY_KEY = h.get_body_key() %}
+        {% set body = data[BODY_KEY] or h.get_template(data[TYPE_KEY]) %}
+        {# TODO JS reload on resource_type change #}
+        {{ form.input(BODY_KEY, label=_('BODY'), id='field-'+BODY_KEY, placeholder=_('custom'), value=body, error=errors[BODY_KEY], classes=['control-medium']) }}
 
-    {% call form.select(TYPE_KEY, label=_('TYPE'), id='field-'+TYPE_KEY,
-        options=formats,
-        selected=data[TYPE_KEY], error=errors.format, classes=['control-medium'], attrs={}, is_required=false) %}
-    <span class="info-block info-block-small">
-        <i class="fa fa-info-circle"></i>
-        {{ _('This will change the form based on the selected type, please select the right one') }}
-    </span>
-    {% endcall %}
-    
-    {% set BODY_KEY = h.get_body_key() %}
-    {% set body = data[BODY_KEY] or h.get_template(data[TYPE_KEY]) %}
-    {# TODO JS reload on resource_type change #}
-    {{ form.input(BODY_KEY, label=_('BODY'), id='field-'+BODY_KEY, placeholder=_('custom'), value=body, error=errors[BODY_KEY], classes=['control-medium']) }}
+        {# TODO JS #}
+        
+        {% set VERSION_KEY = h.get_version_key() %}
+        {% set version = data[VERSION_KEY] %}
+        {{ form.input(VERSION_KEY, label=_('VERSION'), id='field-'+VERSION_KEY, placeholder=_('custom'), value=data[VERSION_KEY], error=errors[VERSION_KEY], classes=['control-medium']) }}
 
-    {# TODO JS #}
-    
-    {% set VERSION_KEY = h.get_version_key() %}
-    {% set version = data[VERSION_KEY] %}
-    {{ form.input(VERSION_KEY, label=_('VERSION'), id='field-'+VERSION_KEY, placeholder=_('custom'), value=data[VERSION_KEY], error=errors[VERSION_KEY], classes=['control-medium']) }}
+    {% endblock %}
 
 {% endif %}
-
-
-{% endblock %}
