--- a/ckanext/jsonschema/templates/package/snippets/package_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_form.html
@@ -1,115 +1,33 @@
 {% ckan_extends %}
 
-{% import 'macros/form.html' as form %}
-{% set action = c.form_action or '' %}
-
-{# This provides a full page that renders a form for adding a dataset. It can
-then itself be extended to add/remove blocks of functionality. #}
-<form id="dataset-edit" class="dataset-form form-horizontal" method="post" action="{{ action }}" data-module="basic-form" novalidate>
-  {% block stages %}
-    {{ h.snippet('package/snippets/stages.html', stages=stage) }}
-  {% endblock %}
-
-  <input type="hidden" name="_ckan_phase" value="dataset_new_1" />
-  {# pkg_name used in 3 stage edit #}
-  <input type="hidden" name="pkg_name" value="{{ data.id }}" />
-  {% block errors %}{{ form.errors(error_summary) }}{% endblock %}
-
-
   {% block basic_fields %}
+  
+    {{super()}}
+
     
-    {% block package_basic_fields_org %}
-      {# if we have a default group then this wants remembering #}
-      {% if data.group_id %}
-      <input type="hidden" name="groups__0__id" value="{{ data.group_id }}" />
+    {% block scripts %}
+      {# which is the jsonschema type in this context/environment #}
+      {% if h.get_dataset_type() in h.package_types() %}
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+        <link rel="stylesheet" href="https://unpkg.com/@trevoreyre/autocomplete-js/dist/style.css"/>
+
+        <script src="https://cdn.jsdelivr.net/npm/@json-editor/json-editor@latest/dist/jsoneditor.min.js"></script>
+        <!-- Markdown -->
+        <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.4.2/src-min/ace.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.4.2/src-min/mode-markdown.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.4.2/src-min/mode-javascript.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.4.2/src-min/mode-json.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.4.2/src-min/mode-css.js"></script> -->
+        <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.4.2/src-min/ext-beautify.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ajv/8.1.0/ajv7.min.js" integrity="sha512-iG/rBFw+Q1mlDQt15pw86zil1/1JeeNoJ1Grux8zZgvIBLDDnRLdA8UaIosHohzrqBEXA2+hIQV7DXnYGYGX/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- autocomplete -->
+        <script src="https://unpkg.com/@trevoreyre/autocomplete-js"></script>
       {% endif %}
+    {% endblock %}  
 
-      {% set dataset_is_draft = data.get('state', 'draft').startswith('draft') or data.get('state', 'none') ==  'none' %}
-      {% set dataset_has_organization = data.owner_org or data.group_id %}
-      {% set organizations_available = h.organizations_available('create_dataset') %}
-      {% set user_is_sysadmin = h.check_access('sysadmin') %}
-      {% set show_organizations_selector = organizations_available %}
-      {% set show_visibility_selector = dataset_has_organization or (organizations_available and (user_is_sysadmin or dataset_is_draft)) %}
-    
-      {% if show_organizations_selector and show_visibility_selector %}
-      <div data-module="dataset-visibility">
-        {% endif %}
-    
-        {% if show_organizations_selector %}
-        {% set existing_org = data.owner_org or data.group_id %}
-        <div class="form-group control-medium">
-          <label for="field-organizations" class="control-label">{{ _('Organization') }}</label>
-          <div class="controls">
-            <select id="field-organizations" name="owner_org" data-module="autocomplete">
-              {% if h.check_config_permission('create_unowned_dataset') %}
-              <option value="" {% if not selected_org and data.id %} selected="selected" {% endif %}>{{ _('No organization') }}</option>
-              {% endif %}
-              {% for organization in organizations_available %}
-              {# get out first org from users list only if there is not an existing org #}
-              {% set selected_org = (existing_org and existing_org == organization.id) or (not existing_org and not data.id and organization.id == organizations_available[0].id) %}
-              <option value="{{ organization.id }}" {% if selected_org %} selected="selected" {% endif %}>{{ organization.display_name }}</option>
-              {% endfor %}
-            </select>
-          </div>
-        </div>
-        {% endif %}
-    
-        {% if show_visibility_selector %}
-        {% block package_metadata_fields_visibility %}
-        <div class="form-group control-medium">
-          <label for="field-private" class="control-label">{{ _('Visibility') }}</label>
-          <div class="controls">
-            <select id="field-private" name="private" class="form-control">
-              {% for option in [('True', _('Private')), ('False', _('Public'))] %}
-              <option value="{{ option[0] }}" {% if option[0] == data.private|trim %}selected="selected"{% endif %}>{{ option[1] }}</option>
-              {% endfor %}
-            </select>
-          </div>
-        </div>
-        {% endblock %}
-        {% endif %}
-    
-        {% if show_organizations_selector and show_visibility_selector %}
-      </div>
-      {% endif %}
-
-      {% if data.id and h.check_access('package_delete', {'id': data.id}) and data.state != 'active' %}
-      <div class="form-group control-medium">
-        <label for="field-state" class="control-label">{{ _('State') }}</label>
-        <div class="controls">
-          <select class="form-control" id="field-state" name="state">
-            <option value="active" {% if data.get('state', 'none') == 'active' %} selected="selected" {% endif %}>{{ _('Active') }}</option>
-            <option value="deleted" {% if data.get('state', 'none') == 'deleted' %} selected="selected" {% endif %}>{{ _('Deleted') }}</option>
-          </select>
-        </div>
-      </div>
-      {% endif %}
-
-    {% endblock %}
-
-    {% if h.get_dataset_type() in h.package_types() %}
-
-      {% block package_basic_fields_title %}
-      {% endblock %}
-
-      {% block package_basic_fields_url %}
-      {% endblock %}
-
-      {% block package_basic_fields_custom %}
-      {% endblock %}
-
-      {% block package_basic_fields_description %}
-      {% endblock %}
-
-      {% block package_basic_fields_tags %}
-      {% endblock %}
-
-      {% block package_basic_fields_license %}
-      {% endblock %}
-
-    {% else %}
-      {% snippet 'package/snippets/package_basic_fields.html', data=data, errors=errors, licenses=c.licenses, groups_available=c.groups_available %}
-    {% endif %}
   {% endblock %}
 
   {% block metadata_fields %}
@@ -199,5 +117,4 @@ then itself be extended to add/remove blocks of functionality. #}
       {{ form.required_message() }}
     </div>
   {% endblock %}
-</form>
 
