--- a/ckanext/jsonschema/templates/package/snippets/package_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_form.html
@@ -56,10 +56,10 @@
         <input id="field-extras-1-value" name="extras__0__value" value={{schema_type}} type="hidden" class="form-control"/>
       
         <input id="field-extras-2-key" name="extras__2__key" value="{{OPT_KEY}}" type="hidden" />
-        <input id="field-extras-2-value" name="extras__2__value" value="{{opt}}" type="text" class="form-control"/>
+        <input id="field-extras-2-value" name="extras__2__value" value="{{opt}}" type="hidden" class="form-control"/>
       
         <input id="field-extras-3-key" name="extras__3__key" value="{{VERSION_KEY}}" type="hidden" />
-        <input id="field-extras-3-value" name="extras__3__value" value="{{version}}" type="text" class="form-control"/>
+        <input id="field-extras-3-value" name="extras__3__value" value="{{version}}" type="hidden" class="form-control"/>
       </div>
 
 
@@ -67,7 +67,8 @@
         data-module-opt="{{ opt }}"
         data-module-schema="{{ schema }}"
         data-module-body="{{ body }}"
-        data-module-type="{{ schema_type }}" data-module-ckan-url="{{ h.url_for('/',_external=True) }}"/>
+        data-module-type="{{ schema_type }}"
+        data-module-ckan-url="{{ h.url_for('/',_external=True) }}"/>
 
       <!--  -->
       <div id="editor">
@@ -91,30 +92,5 @@
     {% else %}
       {% snippet 'package/snippets/package_metadata_fields.html', data=data, errors=errors %}
     {% endif %}
-  {% endblock %}
-
-  {% block form_actions %}
-    <div class="form-actions">
-      {% block disclaimer %}
-        <p class="action-info small">
-          {%- trans -%}
-          The <i>data license</i> you select above only applies to the contents
-          of any resource files that you add to this dataset. By submitting
-          this form, you agree to release the <i>metadata</i> values that you
-          enter into the form under the
-          <a href="http://opendatacommons.org/licenses/odbl/1-0/">Open Database License</a>.
-          {%- endtrans -%}
-        </p>
-      {% endblock %}
-      {% block delete_button %}
-        {% if h.check_access('package_delete', {'id': data.id}) and not data.state == 'deleted' %}
-          <a class="btn btn-danger pull-left" href="{% url_for controller='package', action='delete', id=data.id %}" data-module="confirm-action" data-module-content="{{ _('Are you sure you want to delete this dataset?') }}">{% block delete_button_text %}{{ _('Delete') }}{% endblock %}</a>
-        {% endif %}
-      {% endblock %}
-      {% block save_button %}
-        <button class="btn btn-primary" type="submit" name="save">{% block save_button_text %}{{ _('Next: Add Data') }}{% endblock %}</button>
-      {% endblock %}
-      {{ form.required_message() }}
-    </div>
   {% endblock %}
 
