generalize and introduce jsonschema base plugin. improve management of binded resource types

--- a/ckanext/jsonschema/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_basic_fields.html
@@ -1,6 +1,6 @@
 {% ckan_extends %}
 
-{% if h.get_dataset_type() in h.package_types() %}
+{% if h.jsonschema_get_dataset_type() in h.jsonschema_handled_dataset_types() %}
   {% set jsonschema = true %}
 {% endif %}
 
