--- a/ckanext/jsonschema/templates/package/snippets/package_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_form.html
@@ -74,9 +74,9 @@
       <div id="editor">
         <p>
             <div style="display: inline-block;">
-                <button class="btn btn-primary" id="editor-editor" onclick="javascript:jsonschema.wrap(jsonschema.getEditorAce);">Editor</button>
-                <button class="btn btn-primary" id="editor-howto" onclick="javascript:jsonschema.wrap(jsonschema.getEditor);">HowTo</button>
-                <button class="btn btn-primary" id="editor-toggle" onclick="javascript:jsonschema.wrap(jsonschema.editorToggle);"></button>
+                <button class="btn btn-primary" id="editor-editor" onclick="jsonschema.getEditorAce();">Editor</button>
+                <button class="btn btn-primary" id="editor-howto" onclick="jsonschema.getEditor();">HowTo</button>
+                <button class="btn btn-primary" id="editor-toggle" onclick="jsonschema.editorToggle();"></button>
             </div>
         </p>
         <!-- <p style="border: 2px solid gray;" id="editor-jsonschema-config"> -->
